[package]
name = "aoc-23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1a"
path = "src/bin/day1a/main.rs"

[[bin]]
name = "day1b"
path = "src/bin/day1b/main.rs"

[[bin]]
name = "day2"
path = "src/bin/day2/main.rs"

[[bin]]
name = "day3"
path = "src/bin/day3/main.rs"

[[bin]]
name = "day4"
path = "src/bin/day4/main.rs"

[dependencies]
